--- a/index.html
+++ b/index.html
@@ -309,9 +309,9 @@
   <div class="image-container">
     <img src="IMG_9160.JPG" alt="Fitness Image 1">
     <img src="IMG_0624.JPG" alt="Fitness Image 2">
-    <img src="IMG_9047.JPG" alt="Fitness Image 3">
+    <img src="IMG_9047.jpg" alt="Fitness Image 3">
     <img src="IMG_7629.JPG" alt="Fitness Image 4">
-    <img src="IMG_0714.JPG" alt="Fitness Image 5">
+    <img src="IMG_0714.jpg" alt="Fitness Image 5">
     <img src="IMG_9132.JPG" alt="Fitness Image 6">
   </div>
 
