--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       min-height: 100%;
       overflow-x: hidden;
       overflow-y: auto;
+      font-family: 'Bebas Neue', sans-serif;
     }
 
     body {
       background: url('IMG_1468 (1).jpg') no-repeat center center fixed;
       background-size: cover;
-      font-family: 'Bebas Neue', sans-serif;
       color: rgb(230, 0, 0);
       position: relative;
     }
@@ -66,7 +66,7 @@
     header h1 {
       font-size: 3rem;
       color: white;
-      text-shadow: 0 0 10px white;
+      text-shadow: 0 0 5px white;
     }
 
     .nav-section {
@@ -126,7 +126,7 @@
     section.hero h1 {
       font-size: 60px;
       margin-bottom: 20px;
-      background: linear-gradient(270deg, #ff0000,orange,crimson);
+      background: linear-gradient(270deg, #ff0000, orange, crimson);
       background-size: 1600% 1600%;
       background-clip: text;
       -webkit-background-clip: text;
@@ -156,7 +156,7 @@
       color: white;
       text-decoration: none;
       transition: color 0.3s;
-      text-shadow: 0 0 8px white;
+      text-shadow: 0 0 4px white;
       font-weight: bold;
     }
 
@@ -251,11 +251,17 @@
 
       header h1 {
         font-size: 2.2rem;
+        margin-bottom: 10px;
       }
 
       .nav-section {
         flex-direction: column;
         align-items: center;
+        gap: 10px;
+      }
+
+      .nav-links {
+        justify-content: center;
       }
 
       section.hero h1 {
@@ -285,9 +291,9 @@
 <header>
   <h1>Hx Fitness Studio</h1>
   <div class="nav-section">
-    <a href="https://instagram.com" class="social-btn" target="https://www.instagram.com/helix_.01?igsh=NDBlZGw0NnFjcno1">Instagram</a>
-    <a href="https://snapchat.com" class="social-btn" target="https://snapchat.com/t/CZzxIibg">Snapchat</a>
-    <a href="https://www.threads.net" class="social-btn" target="https://www.threads.com/@helix_.01?igshid=NTc4MTIwNjQ2YQ==">Threads</a>
+    <a href="https://www.instagram.com/helix_.01" class="social-btn" target="https://www.instagram.com/helix_.01?igsh=NDBlZGw0NnFjcno1">Instagram</a>
+    <a href="https://snapchat.com/t/CZzxIibg" class="social-btn" target="https://snapchat.com/t/CZzxIibg">Snapchat</a>
+    <a href="https://www.threads.net/@helix_.01" class="social-btn" target="https://www.threads.com/@helix_.01?igshid=NTc4MTIwNjQ2YQ==">Threads</a>
     <div class="nav-links">
       <a href="login.html">Login</a>
       <a href="signup.html">Sign Up</a>
