--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     header h1 {
       font-size: 3rem;
       color: white;
-      text-shadow: 0 0 5px white;
+      text-shadow: 0 0 2px white;
     }
 
     .nav-section {
@@ -102,7 +102,7 @@
     .nav-links a {
       color: white;
       text-decoration: none;
-      text-shadow: 0 0 4px white;
+      text-shadow: 0 0 2px white;
       font-size: 1.2rem;
       background: none;
       border: none;
@@ -112,7 +112,7 @@
 
     .nav-links a:hover {
       color: rgb(230, 0, 0);
-      text-shadow: 0 0 4px rgb(230, 0, 0);
+      text-shadow: 0 0 2px rgb(230, 0, 0);
     }
 
     section.hero {
@@ -133,7 +133,7 @@
       -webkit-text-fill-color: transparent;
       animation: flowGradient 10s ease infinite;
       text-align: center;
-      text-shadow: 0 0 4px red;
+      text-shadow: 0 0 2px red;
     }
 
     @keyframes flowGradient {
@@ -156,13 +156,13 @@
       color: white;
       text-decoration: none;
       transition: color 0.3s;
-      text-shadow: 0 0 4px white;
+      text-shadow: 0 0 2px white;
       font-weight: bold;
     }
 
     .hero-links a:hover {
       color: rgb(230, 0, 0);
-      text-shadow: 0 0 8px rgb(230, 0, 0);
+      text-shadow: 0 0 2px rgb(230, 0, 0);
     }
 
     section.hero p {
@@ -232,14 +232,14 @@
       font-size: 1.5rem;
       color: white;
       text-decoration: none;
-      text-shadow: 0 0 8px white;
+      text-shadow: 0 0 2px white;
       font-weight: bold;
       transition: color 0.3s ease;
     }
 
     .motivation a:hover {
       color: rgb(230, 0, 0);
-      text-shadow: 0 0 8px rgb(230, 0, 0);
+      text-shadow: 0 0 2px rgb(230, 0, 0);
     }
 
     @media (max-width: 600px) {
@@ -291,9 +291,9 @@
 <header>
   <h1>Hx Fitness Studio</h1>
   <div class="nav-section">
-    <a href="https://www.instagram.com/helix_.01" class="social-btn" target="https://www.instagram.com/helix_.01?igsh=NDBlZGw0NnFjcno1">Instagram</a>
-    <a href="https://snapchat.com/t/CZzxIibg" class="social-btn" target="https://snapchat.com/t/CZzxIibg">Snapchat</a>
-    <a href="https://www.threads.net/@helix_.01" class="social-btn" target="https://www.threads.com/@helix_.01?igshid=NTc4MTIwNjQ2YQ==">Threads</a>
+    <a href="https://www.instagram.com/helix_.01" class="social-btn" target="_blank">Instagram</a>
+    <a href="https://snapchat.com/t/CZzxIibg" class="social-btn" target="_blank">Snapchat</a>
+    <a href="https://www.threads.net/@helix_.01" class="social-btn" target="_blank">Threads</a>
     <div class="nav-links">
       <a href="login.html">Login</a>
       <a href="signup.html">Sign Up</a>
